# m5stack-core2-wasm3-as

./: .gitignore  .gitmodules  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
components/imu6866/: CMakeLists.txt
components/m5stack/: CMakeLists.txt
components/wasm/: linker.lf
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  test_bluetooth_serial.cpp  test_bluetooth_serial.h  test_freetype.cpp  test_freetype.h  test_i2c_imu6866.cpp  test_i2c_imu6866.h  test_nvs_wifi.cpp  test_uart_unitgps.cpp  test_uart_unitgps.h  test_wasm3.cpp  test_wasm3_clockenv.cpp  test_wasm3_clockenv.h  test_wasm3_gpsgsv.cpp  test_wasm3_gpsgsv.h  test_wasm3_imu6886.cpp  test_wasm3_imu6886.h
resources/wasm/: app.wasm  clockenv.wasm  imu6886.wasm
wasm/: package-lock.json  package.json
wasm/clockenv/: package-lock.json  package.json
wasm/clockenv/src/: c3dev.ts  main.ts
wasm/clockenv/web/: index.html  main.js
wasm/gpsgsv/web/: main.js
wasm/imu6886/server/: .env  package-lock.json  package.json
wasm/imu6886/server/src/: serial-websocket.js
wasm/imu6886/src/: c3dev.ts  main.ts
wasm/imu6886/web/: main.js
wasm/src/: main.ts
wasm/web/: main.js
